welcome.lessons.welcome.variables.Variables.scala.error
Variables:10: error: value &&! is not a member of Boolean
if (estSurBiscuit&&!enCours){
                 ^